--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -5,3 +5,6 @@ TODO: Add this styling to accommodate for all browsers.
 .PrivateTabIndicator-colorSecondary-15 {
   background-color: #ffffff !important;
 }
+bean {
+  color: #7eaeda0a;
+}
